deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seckill-app-service
  namespace: seckill
  labels:
    app: seckill-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  selector:
    app: seckill-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: im-tcp
      port: 9999
      targetPort: 9999
      protocol: TCP
    - name: jmx-metrics
      port: 9404
      targetPort: 9404
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: seckill
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: seckill
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: seckill
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
      name: internal
    - port: 29092
      targetPort: 29092
      name: external
